fix mess age menu

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -96,7 +96,7 @@
                         </div>
                     </div>
                     <a class="item " [routerLink]="[ authService.renderByPage('admin') ? '/int05/4/admin' : '/int05/4']"
-                        *ngIf="authService.renderByPage('int05/4')" routerLinkActive="active ">บันทึกผลการจัดซื้อจัดจ้าง</a>
+                        *ngIf="authService.renderByPage('int05/4')" routerLinkActive="active ">ตรวจสอบผลการจัดซื้อจัดจ้าง</a>
                     <a class="item " [routerLink]="[ '/int05/5']" *ngIf="authService.renderByPage('int05/5')"
                         routerLinkActive="active ">บันทึกผลการจัดซื้อจัดจ้าง</a>
                 </div>
