--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/receive-line-user/receive-line-user.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/receive-line-user/receive-line-user.component.html
@@ -1,6 +1,6 @@
 <div class="ui grid">
   <div class="sixteen wide column">
-    <h2 class="ui header">เลือกรายเพื่อนตรวจสอบ</h2>
+    <h2 class="ui header">เลือกรายเพื่อตรวจสอบ</h2>
 
     <div class="ui top attached header">
       <span>เพิ่มข้อมูลภายนอก</span>
@@ -9,17 +9,11 @@
     <div class="ui attached segment">
       <div class="ui form">
         <div class="inline fields">
-
           <div class="six wide field">
             <label class="custom-label-w-20">เลขที่วิเคราะห์ข้อมูล</label>
             <input value="{{analysNumber}}" readonly="" class="custom-readonly">
           </div>
         </div>
-
-
-
-
-
       </div>
     </div>
 
@@ -59,15 +53,12 @@
             <div style="overflow-x: scroll;overflow-y: hidden;padding-bottom: 14px;">
               <table id="sendLineUser" class="ui small celled table aligned hover" style="width: 5000px;">
                 <thead id="trDrinamic">
-
-
                 </thead>
                 <tbody>
                 </tbody>
               </table>
             </div>
           </div>
-
         </div>
         <div class="ui center aligned grid">
           <div class="sixteen wide column">
