--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
@@ -76,7 +76,7 @@
                 <th>สรรพสามิตภาค/พื้นที่</th>
                 <th>ผู้สร้างแบบสอบทาน</th>
                 <th>ปีงบประมาณ</th>
-                <th style="width: 40px">#</th>
+                <th style="width: 40px">จัดการ</th>
               </tr>
             </thead>
             <tbody></tbody>
