--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
@@ -45,7 +45,7 @@
                 <th style="text-align: center !important">ลำดับ</th>
                 <th style="text-align: center !important">แบบสอบทานด้าน</th>
                 <th style="text-align: center !important">สร้างโดย</th>
-                <th style="text-align: center !important">Action</th>
+                <th style="text-align: center !important">จัดการ</th>
               </tr>
             </thead>
             <tbody>
@@ -89,23 +89,25 @@
         <div class="sixteen wide center aligned column">
           <button class="ui primary {{ saving && 'loading' }} mini button {{!unsave && 'disabled'}} " type="button"
             (click)="onSave()">
+            <i class="save icon"></i>
             บันทึก
           </button>
           <button type="button" style="margin-left: auto;" class="ui mini {{ chk.length == 0 && 'disabled' }} red button"
             (click)="onDelete()">
-            <i class="delete icon"></i>
+            <i class="trash alternate icon"></i>
             ลบ
           </button>
           <button type="button" (click)="setRL(0)" class="ui mini primary button">
             <!-- {{rl && rlLen > 0 ? 'disabled' : ''}} -->
             <i class="setting icon"></i>
-            กำหนดเงื่อนไข RL
+            กำหนดเงื่อนไขความเสี่ยง
           </button>
           <button type="button" style="margin-left: auto" (click)="onSaved()" class="ui mini green button {{(!finished && !rl && rlLen == 0)|| unsave || datatable == undefined || datatable.length == 0 ? 'disabled' : ''}} ">
-            <i class="save icon"></i>
+            <i class="paper plane icon"></i>
             ส่งแบบสอบทาน
           </button>
           <button type="button" (click)="onCancel()" style="margin-left: auto" class="ui mini button">
+            <i class="remove icon"></i>
             ยกเลิก
           </button>
         </div>
@@ -115,7 +117,7 @@
 
   <div class="sixteen wide column" *ngIf="toggleRL">
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>กำหนดเงื่อนไข RL ปัจจัยเสี่ยงอื่นๆ</span>
+      <span>กำหนดเงื่อนไขความเสี่ยงประเมินระบบการควบคุมภายใน</span>
     </div>
     <div class="ui attached segment">
       <condition class="ui form" (has)="chkRL($event)" (out)="setRL($event)" [riskId]="qtnMasterId" [riskType]="RISK_TYPE"
