--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m2/int02-m2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m2/int02-m2.component.html
@@ -1,3 +1,4 @@
+<!-- <app-breadcrumb [route]="breadcrumb"></app-breadcrumb> -->
 <div class="ui centered grid">
 
     <div class="centered row full-height" *ngIf="!loading">
